--- a/style.css
+++ b/style.css
@@ -77,13 +77,18 @@
 
 .count {
 	width: 40px;
-	height: 25px;
+	height: 30px;
 	background-color: #6C1717;
 	margin-left: 10px;
 	border: 2px solid black;
-
+	font-size: 25px;
+	color: #B22222;
+	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+	text-align: center;
 
 }
+
+
 
 .start {
 	border-radius: 50%;
@@ -101,3 +106,10 @@
 	border: 1px solid black;
 
 }
+
+
+.power{
+	margin-left: 50px;
+}
+
+
