--- a/style.css
+++ b/style.css
@@ -116,3 +116,12 @@
     pointer-events: none;
 }
 
+
+.horizTranslate {
+  -webkit-transition: 1s;
+  -moz-transition: 1s;
+  -ms-transition: 1s;
+  -o-transition: 1s;
+  transition: 1s;
+  background-color: red;
+}
